@startuml
'https://plantuml.com/sequence-diagram
!includeurl https://raw.githubusercontent.com/matthewjosephtaylor/plantuml-style/40c705da84ef9e1c12591094c75f511e2a41c137/style.pu

abstract class SubsystemBase
abstract class CommandBase

IntakeBackComponentsBase ...|> IntakeComponents
IntakeBackComponentsBase --* Intake
IntakeFrontComponentsBase ...|> IntakeComponents

ClosePiston ----|> InstantCommand
IntakeByDriveTrain ---|> ConditionalCommand
IntakeBySpeed ---|> CommandBase
OpenAndCloseAsNeeded ---|> ConditionalCommand
OpenAndIntake ---|> SequentialCommandGroup
OpenPiston ----|> InstantCommand


interface IntakeComponents {
    WPI_TalonFX motor
    DoubleSolenoid solenoid
}

class IntakeBackComponentsBase {
    WPI_TalonFX motor
    DoubleSolenoid solenoid
}

class Intake {
    private final IntakeComponents components;
    void moveBySpeed()
    void stop()
    void openSolenoid()
    closeSolenoid()
    isFrontOpen()
}

class ClosePiston {
}

class IntakeByDriveTrain {

}

class IntakeBySpeed {
    Intake intake
    DoubleSupplier speedSupplier
    void execute()
    void end()
}

class OpenAndCloseAsNeeded {

}

class OpenAndIntake {
    Intake intake
    void end()
}

class OpenPiston {
}
@enduml